[package]
name = "mdbook-note"
version = "0.1.0"
authors = ["Aedius <aedius.filmania@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mdbook = "~0.4"
clap = "~2.33"
semver = "~1.0"
anyhow = "~1.0"
serde = "~1.0"
serde_derive = "~1.0"
serde_json = "~1.0"
regex = "1"